--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!-- Fonte del Proyecto Raleway -->
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Encode+Sans+Condensed:wght@100;400;700&family=Montserrat:wght@300;400;700&family=Open+Sans:wght@300;700&family=Raleway:wght@500&display=swap" rel="stylesheet">
     <title> Mi Portafolio</title>
 </head>
 <body>
@@ -18,18 +20,18 @@
     <section class="menu">
         <header class="menu__header">
             <img src="assets\vector.png">
-            <h3 class="menu__title">Fulana de Tal</h3>
+            <h3 class="menu__title">Benavidez Fernando</h3>
         </header>
-        <nav>
+        <nav class="menu__nav">
             <ul class="menu__list">
                 <li class="menu__list__item"><a href="#sobre-mi">Sobre mi</a></li>
                 <li class="menu__list__item"><a href="#skills">Skills</a></li>
                 <li class="menu__list__item"><a href="#hobbies">Hobbies</a></li>
                 <li class="menu__list__item"><a href="#formacion">Formación</a></li>
                 <li class="menu__list__item"><a href="#xp">Proyectos</a></li>
-                <li class="menu__list__item"><a href="#contacto">Contacto@fulana.com</a></li>
+                <li class="menu__list__item"><a href="#contacto">Contacto</a></li>
             </ul>
-            <li class="menu__list__item__contato"><a href="#contacto">contacto@fulana.com</a></li>
+            <li class="menu__list__item__contato"><a href="#contacto">Benavidez.fernando@hotmail.com</a></li>
         </nav>
     </section>
 
@@ -38,8 +40,8 @@
         <div class="title__div">
             <img class="title__profile" src="assets\profile.png">
             <div class="title__container">
-                <h2 class="title__bio">Hola, mi nombre es Fulana de Tal y construyo paginas web</h2>
-                <h3 class="title__subsection">Soy formada en .... lorem ipsum sit amet consectetur y actualmente estoy participando del proyecto Oracle ONE en Alura Latam.</h3>
+                <h2 class="title__bio">Hola, mi nombre es Fernando Benavidez, Y Proximamente Front End. </h2>
+                <h3 class="title__subsection">Soy Tecnico Electronico. me gusta mucho la programacion y actualmente estoy participando del proyecto Oracle ONE en Alura Latam.</h3>
                 <ul class="title__network">
                      <!-- Pon los enlaces de tus redes sociales favoritas -->
                     <li class="title__network__item"><a href="">Github <img src="assets\arrow.png"> </a></li>
