--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <div class="title__div">
             <img class="title__profile" src="assets\profile.png">
             <div class="title__container">
-                <h2 class="title__bio">Hola, mi nombre es Fernando Benavidez, Y Proximamente Front End. </h2>
-                <h3 class="title__subsection">Soy Tecnico Electronico. me gusta mucho la programacion y actualmente estoy participando del proyecto Oracle ONE en Alura Latam.</h3>
+                <h2 class="title__bio">Hola, mi nombre es Fernando Benavidez. </h2>
+                <h3 class="title__subsection">Soy Tecnico Electronico. Me gusta mucho la programacion y actualmente estoy participando del proyecto Oracle ONE en Alura Latam.</h3>
                 <ul class="title__network">
                      <!-- Pon los enlaces de tus redes sociales favoritas -->
                     <li class="title__network__item"><a href="">Github <img src="assets\arrow.png"> </a></li>
@@ -57,8 +57,10 @@
     <section class="about" id="sobre-mi">
         <div class="about__container">
             <h3 class="about__title">Sobre mi</h3>
-            <p class="about__paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque velit velit, volutpat semper dignissim dictum, imperdiet ut lacus. Quisque gravida ex a mattis pretium. Suspendisse potenti. Ut semper sagittis ligula et lacinia.  </p>
-            <p class="about__paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque velit velit, volutpat semper dignissim dictum, imperdiet ut lacus. Quisque gravida ex a mattis pretium. Suspendisse potenti. Ut semper sagittis ligula et lacinia. Aenean sit amet felis venenatis, egestas metus vitae, aliquet metus.</p>
+            <p class="about__paragraph">Soy Argentino y de Cordoba Capital, tengo 38 años. Me gusta mucho la logica y la programacion, soy autodidacta y proactivo.</p>
+            <p class="about__paragraph">Tengo experiencia en Mantenimiento de maquinas industriales(PLC y diagramas Electricos), Sistemas Scada, neumatica e hidraulica. Progamacion y mantemiento de robot Kuka. Armado y reparacion de PC. Redes.
+                Actualmente estoy apliando horizontes sumergiendome a la programacion FrontEnd gracias al Programa Alura LATAM Oracle ONE.
+            </p>
             <!-- Si quieres, pon tú firma acá! -->
             <img src="assets\signature.png">
         </div>
