--- a/index.html
+++ b/index.html
@@ -132,46 +132,45 @@
             <div class="hobbies__line">
                 <div class="hobbies__box">
                     <ul>
-                        <li class="hobbies__img"><img src="assets\skate_icon.png"></li>
-                        <li class="hobbies__name"> Patinaje</li>
+                        <li class="hobbies__img"><img src="./assets/png/004-soccer.png"></li>
+                        <li class="hobbies__name"> Futbol</li>
                     </ul>
                 </div>
 
                 <div class="hobbies__box">
                     <ul>
-                        <li class="hobbies__img"> <img src="assets\guitar_icon.png" alt=""></li>
-                        <li class="hobbies__name">Tocar bajo</li>
-                    </ul>
-                </div>
-
-                <div class="hobbies__box">
-                    <ul>
-                        <li class="hobbies__img"> <img src="assets\headphones_icon.png" alt=""></li>
-                        <li class="hobbies__name">Oir música</li>
-                    </ul>
-                </div>
-
-                <div class="hobbies__box">
-                    <ul>
-                        <li class="hobbies__img"><img src="assets\tv_icon.png" alt=""></li>
-                        <li class="hobbies__name">Ver séries</li>
-                    </ul>
-                </div>
-
-                <div class="hobbies__box">
-                    <ul>
-                        <li class="hobbies__img"> <img src="assets\forkspoon_icon.png" alt=""> </li>
+                        <li class="hobbies__img"> <img src="./assets/png/005-chef.png" alt=""></li>
                         <li class="hobbies__name">Cocinar</li>
                     </ul>
                 </div>
 
                 <div class="hobbies__box">
                     <ul>
-                        <li class="hobbies__img"> <img src="assets\camera_icon.png" alt=""> </li>
-                        <li class="hobbies__name">Tomar fotos</li>
+                        <li class="hobbies__img"> <img src="./assets/png/003-gardening.png" alt=""></li>
+                        <li class="hobbies__name">Jardineria</li>
                     </ul>
                 </div>
-        </div>
+
+                <div class="hobbies__box">
+                    <ul>
+                        <li class="hobbies__img"><img src="./assets/png/002-freelancer.png" alt=""></li>
+                        <li class="hobbies__name">Tutoriales</li>
+                    </ul>
+                </div>
+
+                <div class="hobbies__box">
+                    <ul>
+                        <li class="hobbies__img"> <img src="./assets/png/001-cinema.png" alt=""> </li>
+                        <li class="hobbies__name">Cine</li>
+                    </ul>
+                </div>
+                <div class="hobbies__box">
+                    <ul>
+                        <li class="hobbies__img"> <img src="./assets/png/dj.png" alt=""> </li>
+                        <li class="hobbies__name">dj set</li>
+                    </ul>
+                </div>
+                
     </section>
 
         <!-- Sección de Formación académica -->
@@ -181,33 +180,26 @@
             <div class="academic__courses__box">
                 <ul class="academic__courses__list">
                     <!-- Pon el logotipo de la institución de formación -->
-                    <li class="academic__courses__item__img"><img src="assets\ufpr_logo.png"></li>
-                    <li class="academic__courses__item__title"><h4>Análisis de datos</h4></li>
-                    <li class="academic__courses__item__subtitle"><p>2018 - UFPR</p></li>
+                    <li class="academic__courses__item__img"><img src="./assets/png/balseiro.png"></li>
+                    <li class="academic__courses__item__title"><h4>Tecnico Electronico</h4></li>
+                    <li class="academic__courses__item__subtitle"><p>2002 - Ipet 66</p></li>
                 </ul>
             </div>
             <div class="academic__courses__box">
                 <ul class="academic__courses__list">
                     <!--Pon el logotipo de la institución de formación -->
-                    <li class="academic__courses__item__img"><img src="assets\alura_logo.png"></li>
-                    <li class="academic__courses__item__title"><h4>Formación en UX Design</h4></li>
-                    <li class="academic__courses__item__subtitle"><p>2019 - Alura</p></li>
+                    <li class="academic__courses__item__img"><img src="./assets/svg/aluraoracle.svg"></li>
+                    <li class="academic__courses__item__title"><h4>Programa ONE Front End</h4></li>
+                    <li class="academic__courses__item__subtitle"><p>En Curso - Alura</p></li>
                 </ul>
             </div>
-            <div class="academic__courses__box">
-                <ul class="academic__courses__list">
-                    <!-- Pon el logotipo de la institución de formación -->
-                    <li class="academic__courses__item__img"><img src="assets\ufrj_logo.png"></li>
-                    <li class="academic__courses__item__title"><h4>Posgrado en diseño</h4></li>
-                    <li class="academic__courses__item__subtitle"><p>En curso - UFRJ</p></li>
-                </ul>
-            </div>
+            
         </div>
     </section>
 
     <!-- Sección de Experiencia Profesional/Proyectos-->
     <section class="experience" id="xp">
-        <h2 class="experience__section__title" >Experiencia Profissional</h2>
+        <h2 class="experience__section__title" >Experiencia Professional</h2>
         <div class="experiencie__box">
             <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
             <img class="experience__img" src="assets\decod_print.png">
@@ -216,8 +208,8 @@
                 <h3 class="experience__text">Challenge Alura Codificador </h3>
                     <div class="experience__description">
                         <!-- Pon el enlace del proyecto en Github o GithubPages -->
-                            <span class="experience__repo"><a href="https://github.com/alura-challenges/challenge-one-encriptador-latam"><button class="experiencia__botao--repo">Repositório</button></a></span>
-                            <span class="experience__demo"><a href=""><button class="experience__botao--demo">Ver demo</button></a></span>
+                            <span class="experience__repo"><a href="https://github.com/fernandojbcba/encriptador_alura_one"><button class="experiencia__botao--repo">Repositório</button></a></span>
+                            <span class="experience__demo"><a href="https://fernandojbcba.github.io/encriptador_alura_one/"><button class="experience__botao--demo">Ver demo</button></a></span>
                     </div>
             </div>
         </div>  
