--- a/index.html
+++ b/index.html
@@ -202,75 +202,50 @@
         <h2 class="experience__section__title" >Experiencia Professional</h2>
         <div class="experiencie__box">
             <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
-            <img class="experience__img" src="assets\decod_print.png">
+            <img class="experience__img" src="./assets/png/encriptador.png">
             <div class="experience__info"
                 <h2 class="experience__title">Encriptador de texto</h2>
                 <h3 class="experience__text">Challenge Alura Codificador </h3>
                     <div class="experience__description">
                         <!-- Pon el enlace del proyecto en Github o GithubPages -->
-                            <span class="experience__repo"><a href="https://github.com/fernandojbcba/encriptador_alura_one"><button class="experiencia__botao--repo">Repositório</button></a></span>
-                            <span class="experience__demo"><a href="https://fernandojbcba.github.io/encriptador_alura_one/"><button class="experience__botao--demo">Ver demo</button></a></span>
+                            <span class="experience__repo"><a href="https://github.com/fernandojbcba/encriptador_alura_one"><button class="experience__btn--repo">Repositório</button></a></span>
+                            <span class="experience__demo"><a href="https://fernandojbcba.github.io/encriptador_alura_one/"><button class="experience__btn--demo">Ver demo</button></a></span>
                     </div>
             </div>
         </div>  
 
         <div class="experiencie__box">
             <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
-            <img class="experience__img" src="assets\forca_print.png">
+            <img class="experience__img" src="./assets/png/ahorcado.png">
             <div class="experience__info"
                 <h2 class="experience__title">Juego creado con HTML y JavaScript</h2>
-                <h3 class="experience__text">Challenge Oracle </h3>
+                <h3 class="experience__text">Challenge Alura ahorcado </h3>
                     <div class="experience__description">
                         <!-- Pon el enlace del proyecto en Github o GithubPages -->
-                            <span class="experience__repo"><a href="https://github.com/alura-challenges/challenge-one-juego-ahorcado"><button class="experiencia__botao--repo">Repositório</button></a></span>
-                            <span class="experience__demo"><a href=""><button class="experience__botao--demo">Ver demo</button></a></span>
+                            <span class="experience__repo"><a href="https://github.com/fernandojbcba/ahorcado"><button class="experience__btn--repo">Repositório</button></a></span>
+                            <span class="experience__demo"><a href="https://fernandojbcba.github.io/ahorcado/"><button class="experience__btn--demo">Ver demo</button></a></span>
                     </div>
             </div>
         </div>  
 
-        <div class="experience__box">
-            <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
-            <img class="experience__img" src="assets\secretcode_print.png">
-            <div class="experience__info-container"
-                <h2 class="experience__title">Encriptador de texto</h2>
-                <h3 class="experience__text">Challenge Oracle </h3>
-                    <div class="experience__description">
-                            <!-- Pon el enlace del proyecto en Github o GithubPages -->
-                            <span class="experience__repo"><a href="https://github.com/alura-challenges/challenge-one-encriptador-latam"><button class="experiencia__botao--repo">Repositório</button></a></span>
-                            <span class="experience__demo"><a href=""><button class="experience__botao--demo">Ver demo</button></a></span>
-                    </div>
-            </div>
-        </div>  
-
-        <div class="experience__box">
-            <img class="experience__img" src="assets\forca2_print.png">
-            <div class="experience__info-container"
-            <h2 class="experience__title">Juego creado con HTML, CSS y JavaScript</h2>
-                <h3 class="experience__text">Challenge Oracle </h3>
-                    <div class="experience__description">
-                            <!-- Pon el enlace del proyecto en Github o GithubPages -->
-                            <span class="experience__repo"><a href="https://github.com/alura-challenges/challenge-one-juego-ahorcado"><button class="experiencia__botao--repo">Repositório</button></a></span>
-                            <span class="experience__demo"><a href=""><button class="experience__botao--demo">Ver demo</button></a></span>
-                    </div>
-        </div>
         </div>  
 
         <!-- Sección de Contacto -->
-        <section class="formcontato" id="contacto">
-            <div  class="formcontato__contacto">
-                <div class="formcontato--esquerda">
-                    <img class="formcontato__img" src="assets\contact_image.png">
+        <section class="formcontacto" id="contacto">
+            <div  class="formcontacto__contacto">
+                <div class="formcontacto--esquerda">
+                    <img class="formcontacto__img" src="assets\contact_image.png">
                 </div>
-                <div class="formcontato__text">
-                    <h2 class="formcontato__title">Contacto</h2>
-                    <h3 class="formcontato__subtext">¿Quieres contactarme?</h3>
-                    <h3 class="formcontato__subtext">Complete el siguiente formulario y me pondré en contacto con usted lo antes posible. </h3>
-                    <form class="formcontato__form" name="form">
-                        <input class="formcontato__input" type="text" name="nombre" placeholder="Nombre">
-                        <input class="formcontato__input" type="email" name="email" placeholder="E-mail">
-                        <input class="formcontato__input" type="text" name="asunto" placeholder="Assunto">
-                        <textarea class="formcontato__textarea" rows="5" cols="40" id="mensagem" name="mensaje" placeholder="Mensaje"></textarea>
-                        <button type="submit" class="formcontato__botao">Enviar mensaje</button>
+                <div class="formcontacto__text">
+                    <h2 class="formcontacto__title">Contacto</h2>
+                    <h3 class="formcontacto__subtext">¿Quieres contactarme?</h3>
+                    <h3 class="formcontacto__subtext">Complete el siguiente formulario y me pondré en contacto con usted lo antes posible. </h3>
+                    <form class="formcontacto__form" name="form">
+                        <input class="formcontacto__input" type="text" name="nombre" placeholder="Nombre">
+                        <input class="formcontacto__input" type="email" name="email" placeholder="E-mail">
+                        <input class="formcontacto__input" type="text" name="asunto" placeholder="Assunto">
+                        <textarea class="formcontacto__textarea" rows="5" cols="40" id="mensagem" name="mensaje" placeholder="Mensaje"></textarea>
+                        <button type="submit" class="formcontacto__btn">Enviar mensaje</button>
                     </form>
                 </div>
             </div>
@@ -279,8 +254,8 @@
         <!-- Sección de Footer -->
         <section class="footer">
             <div class="footer__rodape">
-                <p>Desarrollado por Fulana de Tal</p>
-                <p>2022</p>
+                <p>Desarrollado por Benavidez Fernando</p>
+                <p>2023</p>
             </div>
         </section>
     </div>
