--- a/index.html
+++ b/index.html
@@ -4,15 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Referencia de la hoja de estilo de Css -->
-    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- Fonte del Proyecto Raleway -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Encode+Sans+Condensed:wght@100;400;700&family=Montserrat:wght@300;400;700&family=Open+Sans:wght@300;700&family=Raleway:wght@500&display=swap" rel="stylesheet">
-    <title> Mi Portafolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Encode+Sans+Condensed:wght@100;400;700&family=Montserrat:wght@300;400;700&family=Open+Sans:wght@300;700&family=Raleway:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/about.css">
+    <link rel="stylesheet" href="./css/about.css">
+    <link rel="stylesheet" href="./css/academic.css">
+    <link rel="stylesheet" href="./css/experience.css">
+    <link rel="stylesheet" href="./css/footer.css">
+    <link rel="stylesheet" href="./css/formcontacto.css">
+    <link rel="stylesheet" href="./css/menu.css">
+    <link rel="stylesheet" href="./css/skill_and_hobbies.css">
+    <link rel="stylesheet" href="./css/title.css">
+    <title>Fernando Benavidez</title>
+    <link rel="shortcut icon" href="https://img.icons8.com/fluency/48/null/online-coding.png" type="image/x-icon">
+
 </head>
 <body>
     <!-- Sección del Menú  -->
@@ -41,13 +48,13 @@
             <img class="title__profile" src="assets\profile.png">
             <div class="title__container">
                 <h2 class="title__bio">Hola, mi nombre es Fernando Benavidez. </h2>
-                <h3 class="title__subsection">Soy Tecnico Electronico. Me gusta mucho la programacion y actualmente estoy participando del proyecto Oracle ONE en Alura Latam.</h3>
+                <h3 class="title__subsection">Soy Tecnico Electronico. Me gusta mucho la programacion y  actualmente estoy participando del proyecto Oracle ONE en Alura Latam.</h3>
                 <ul class="title__network">
                      <!-- Pon los enlaces de tus redes sociales favoritas -->
-                    <li class="title__network__item"><a href="">Github <img src="assets\arrow.png"> </a></li>
-                    <li class="title__network__item"><a href="">Linkedin <img src="assets\arrow.png"></a></li>
-                    <li class="title__network__item"><a href="">Instagram <img src="assets\arrow.png"></a></li>
-                    <li class="title__network__item"><a href="">Currículo <img src="assets\arrow.png"></a></li>
+                    <li class="title__network__item"><a href="https://github.com/fernandojbcba">Github <img src="./assets/svg/Github.svg"> </a></li>
+                    <li class="title__network__item"><a href="https://www.linkedin.com/in/fernando-benavidez/">Linkedin <img src="./assets/svg/LinkedIN.svg"></a></li>
+                    <li class="title__network__item"><a href="https://www.instagram.com/bena.fer.javi/">Instagram <img src="./assets/svg/Instagram.svg"></a></li>
+                    <li class="title__network__item"><a href="./assets/cv.pdf">Currículo <img src="./assets/svg/resume-cv-icon.svg"></a></li>
                 </ul>
             </div>
         </div>
@@ -234,18 +241,18 @@
         <section class="formcontacto" id="contacto">
             <div  class="formcontacto__contacto">
                 <div class="formcontacto--esquerda">
-                    <img class="formcontacto__img" src="assets\contact_image.png">
+                    <img class="formcontacto__img" src="./assets/png/contactme.png">
                 </div>
                 <div class="formcontacto__text">
                     <h2 class="formcontacto__title">Contacto</h2>
                     <h3 class="formcontacto__subtext">¿Quieres contactarme?</h3>
                     <h3 class="formcontacto__subtext">Complete el siguiente formulario y me pondré en contacto con usted lo antes posible. </h3>
                     <form class="formcontacto__form" name="form">
-                        <input class="formcontacto__input" type="text" name="nombre" placeholder="Nombre">
-                        <input class="formcontacto__input" type="email" name="email" placeholder="E-mail">
-                        <input class="formcontacto__input" type="text" name="asunto" placeholder="Assunto">
-                        <textarea class="formcontacto__textarea" rows="5" cols="40" id="mensagem" name="mensaje" placeholder="Mensaje"></textarea>
-                        <button type="submit" class="formcontacto__btn">Enviar mensaje</button>
+                        <input class="formcontacto__input" type="text" name="nombre" placeholder="Nombre" id="form_nombre">
+                        <input class="formcontacto__input" type="email" name="email" placeholder="E-mail" id="form_email">
+                        <input class="formcontacto__input" type="text" name="asunto" placeholder="Assunto" id="form_asunto">
+                        <textarea class="formcontacto__textarea" rows="5" cols="40" id="mensagem" name="mensaje" placeholder="Mensaje" id="form_mensaje"></textarea>
+                        <button type="submit" class="formcontacto__btn" id="form_boton_enviar">Enviar mensaje</button>
                     </form>
                 </div>
             </div>
