--- a/index.html
+++ b/index.html
@@ -248,10 +248,10 @@
                     <h3 class="formcontacto__subtext">¿Quieres contactarme?</h3>
                     <h3 class="formcontacto__subtext">Complete el siguiente formulario y me pondré en contacto con usted lo antes posible. </h3>
                     <form class="formcontacto__form" name="form">
-                        <input class="formcontacto__input" type="text" name="nombre" placeholder="Nombre" id="form_nombre">
-                        <input class="formcontacto__input" type="email" name="email" placeholder="E-mail" id="form_email">
-                        <input class="formcontacto__input" type="text" name="asunto" placeholder="Assunto" id="form_asunto">
-                        <textarea class="formcontacto__textarea" rows="5" cols="40" id="mensagem" name="mensaje" placeholder="Mensaje" id="form_mensaje"></textarea>
+                        <input class="formcontacto__input" type="text" name="nombre" placeholder="Nombre">
+                        <input class="formcontacto__input" type="email" name="email" placeholder="E-mail">
+                        <input class="formcontacto__input" type="text" name="asunto" placeholder="Assunto">
+                        <textarea class="formcontacto__textarea" rows="5" cols="40" id="mensagem" name="mensaje" placeholder="Mensaje"></textarea>
                         <button type="submit" class="formcontacto__btn" id="form_boton_enviar">Enviar mensaje</button>
                     </form>
                 </div>
