se  agrego alurageek

--- a/index.html
+++ b/index.html
@@ -234,8 +234,21 @@
                     </div>
             </div>
         </div>  
-
+        <div class="experiencie__box">
+            <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
+            <img class="experience__img" src="./assets/png/alurageek.png">
+            <div class="experience__info"
+                <h2 class="experience__title">challenge se utilizo responsive, javascript, CRUD.</h2>
+                <h3 class="experience__text">Challenge Ecommerce AluraGeek </h3>
+                    <div class="experience__description">
+                        <!-- Pon el enlace del proyecto en Github o GithubPages -->
+                            <span class="experience__repo"><a href="https://github.com/fernandojbcba/challenge-one-alurageek-latam"><button class="experience__btn--repo">Repositório</button></a></span>
+                            <span class="experience__demo"><a href="https://challenge-one-alurageek-latam.vercel.app/"><button class="experience__btn--demo">Ver demo</button></a></span>
+                    </div>
+            </div>
+        </div> 
         </div>  
+        
 
         <!-- Sección de Contacto -->
         <section class="formcontacto" id="contacto">
