--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         <div class="title__div">
             <img class="title__profile" src="assets\profile.png">
             <div class="title__container">
-                <h2 class="title__bio">Hola, mi nombre es Fernando Benavidez. </h2>
-                <h3 class="title__subsection">Soy Tecnico Electronico. Me gusta mucho la programacion y  actualmente estoy participando del proyecto Oracle ONE en Alura Latam.</h3>
+                <h2 class="title__bio">Hola, soy Fernando Benavidez. </h2>
+                <h3 class="title__subsection">Soy Tecnico Electronico, Front End y Ux Ui Desing,Me gusta mucho la programacion, la electronica, Frontend y el UX UI.</h3>
                 <ul class="title__network">
                      <!-- Pon los enlaces de tus redes sociales favoritas -->
                     <li class="title__network__item"><a href="https://github.com/fernandojbcba">Github <img src="./assets/svg/Github.svg"> </a></li>
@@ -66,7 +66,7 @@
             <h3 class="about__title">Sobre mi</h3>
             <p class="about__paragraph">Soy Argentino y de Cordoba Capital, tengo 38 años. Me gusta mucho la logica y la programacion, soy autodidacta y proactivo.</p>
             <p class="about__paragraph">Tengo experiencia en Mantenimiento de maquinas industriales(PLC y diagramas Electricos), Sistemas Scada, neumatica e hidraulica. Progamacion y mantemiento de robot Kuka. Armado y reparacion de PC. Redes.
-                Actualmente estoy apliando horizontes sumergiendome a la programacion FrontEnd gracias al Programa Alura LATAM Oracle ONE.
+                Actualmente estoy apliando horizontes sumergiendome en el ux/ui design .
             </p>
             <!-- Si quieres, pon tú firma acá! -->
             <img src="assets\signature.png">
@@ -130,6 +130,19 @@
                         <li class="skills__name">Figma</li>
                     </ul>
                 </div>
+                <div class="skills__box">
+                    <ul>
+                        <li class="skills__img"> <img src="./assets/png/ui-design.png" alt=""> </li>
+                        <li class="skills__name">ui design</li>
+                    </ul>
+                </div>
+                <div class="skills__box">
+                    <ul>
+                        <li class="skills__img"> <img src="./assets/png/ux-design.png" alt=""> </li>
+                        <li class="skills__name">ux design</li>
+                    </ul>
+                </div>
+
         </div>
     </section>
 
@@ -197,10 +210,18 @@
                     <!--Pon el logotipo de la institución de formación -->
                     <li class="academic__courses__item__img"><img src="./assets/svg/aluraoracle.svg"></li>
                     <li class="academic__courses__item__title"><h4>Programa ONE Front End</h4></li>
-                    <li class="academic__courses__item__subtitle"><p>En Curso - Alura</p></li>
+                    <li class="academic__courses__item__subtitle"><p>Finalizado- Alura</p></li>
                 </ul>
             </div>
-            
+            <div class="academic__courses__box">
+                <ul class="academic__courses__list">
+                    <!--Pon el logotipo de la institución de formación -->
+                    <li class="academic__courses__item__img"><img src="./assets/png/ob.png"></li>
+                    <li class="academic__courses__item__title"><h4>UX/UI Open 2023</h4></li>
+                    <li class="academic__courses__item__subtitle"><p>En Curso - OPEN BOOTCAMP</p></li>
+                    
+                </ul>
+            </div>
         </div>
     </section>
 
@@ -244,6 +265,32 @@
                         <!-- Pon el enlace del proyecto en Github o GithubPages -->
                             <span class="experience__repo"><a href="https://github.com/fernandojbcba/challenge-one-alurageek-latam"><button class="experience__btn--repo">Repositório</button></a></span>
                             <span class="experience__demo"><a href="https://challenge-one-alurageek-latam.vercel.app/"><button class="experience__btn--demo">Ver demo</button></a></span>
+                    </div>
+            </div>
+        </div> 
+        <div class="experiencie__box">
+            <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
+            <img class="experience__img" src="./assets/png/aluraflix.png">
+            <div class="experience__info"
+                <h2 class="experience__title">challenge se utilizo responsive, javascript, React</h2>
+                <h3 class="experience__text">Challenge aluraflix </h3>
+                    <div class="experience__description">
+                        <!-- Pon el enlace del proyecto en Github o GithubPages -->
+                            <span class="experience__repo"><a href="https://github.com/fernandojbcba/aluraflixdb"><button class="experience__btn--repo">Repositório</button></a></span>
+                            <span class="experience__demo"><a href="https://aluraflixdb.vercel.app/"><button class="experience__btn--demo">Ver demo</button></a></span>
+                    </div>
+            </div>
+        </div> 
+        <div class="experiencie__box">
+            <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
+            <img class="experience__img" src="./assets/png/control gym.png">
+            <div class="experience__info"
+                <h2 class="experience__title">ux ui design</h2>
+                <h3 class="experience__text">UX/UI Open 2023 </h3>
+                    <div class="experience__description">
+                        <!-- Pon el enlace del proyecto en Github o GithubPages -->
+                            <span class="experience__repo"><a href="#"><button class="experience__btn--repo">ux ui</button></a></span>
+                            <span class="experience__demo"><a href="#"><button class="experience__btn--demo">UX/UI Open 2023</button></a></span>
                     </div>
             </div>
         </div> 
